# dl-from-scratch-LM

./: .gitignore  README.md  pyproject.toml
configs/: base.yaml  big_bird_small.yaml  vanilla_large.yaml  vanilla_medium.yaml  vanilla_small.yaml  vanilla_xl.yaml
core/: __init__.py
core/attention/: __init__.py  base.py
core/layers/: __init__.py  utils.py
core/model/: __init__.py  decoder.py  decoder_block.py  language_model.py
core/positional_encoding/: __init__.py  base.py
papers/big_bird/: attention.py
papers/rope/: attention.py  positional_encoding.py
papers/vanilla_attention/: attention.py
scripts/: run_ablation.py  train.py  train_ddp.py
training/: __init__.py  checkpointing.py  data.py  ddp_setup.py  factory.py  metrics_tracker.py  optimizer.py  trainer.py  wandb_logger.py
training/configs/: __init__.py  schemas.py
utils/: __init__.py  ablation.py  attention_hooks.py  benchmark.py  metrics.py
utils/visualisation/: __init__.py  entropy_plots.py  head_view.py  model_view.py  neuron_view.py
wandb/: latest-run
wandb/run-20260422_151032-yrw060bo/: run-yrw060bo.wandb
wandb/run-20260422_151835-pvz5jccz/: run-pvz5jccz.wandb
wandb/run-20260422_152233-op15pmau/: run-op15pmau.wandb
wandb/run-20260422_152437-rh188c8r/: run-rh188c8r.wandb
wandb/run-20260422_152839-llpb8agf/: run-llpb8agf.wandb
wandb/run-20260422_154735-b0odd77a/: run-b0odd77a.wandb
wandb/run-20260422_155734-5e7hhcs7/: run-5e7hhcs7.wandb
wandb/run-20260422_161420-4iw90bbu/: run-4iw90bbu.wandb
wandb/run-20260422_161906-4wftmi38/: run-4wftmi38.wandb
(+53 files in other folders)
